profiles for shaheen

--- a/src/pyclaw/log.config
+++ b/src/pyclaw/log.config
@@ -22,54 +22,54 @@ keys=default,detailed
 #  Logger settings
 #
 [logger_root]
-level=INFO                             
-handlers=file,console
+level=CRITICAL                             
+handlers=console
 
 [logger_io]
-level=INFO
+level=CRITICAL
 propagate=0
 qualname=io
-handlers=file
+handlers=console
 channel=io
 parent=(root)
 
 [logger_solution]
-level=INFO
+level=CRITICAL
 propagate=0
 qualname=solution
-handlers=file
+handlers=console
 channel=solution
 partent=(root)
 
 [logger_plot]
-level=INFO
+level=CRITICAL
 propagate=0
 qualname=plot
-handlers=file
+handlers=console
 channel=plot
 parent=(root)
 
 [logger_evolve]
-level=DEBUG
+level=CRITICAL
 propagate=0
 qualname=evolve
-handlers=file,console
+handlers=console
 channel=evolve
 parent=(root)
 
 [logger_f2py]
-level=DEBUG
+level=CRITICAL
 propagate=0
 qualname=f2py
-handlers=file,console
+handlers=console
 channel=f2py
 parent=(root)
 
 [logger_data]
-level=INFO
+level=CRITICAL
 propagate=0
 qualname=data
-handlers=file,console
+handlers=console
 channel=data
 parent=(root)
 # ----------------------------------------------------------------------------
